--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <li>
           <div class="date"><b>2019</b></div>
           <div class="info">
-            <p class="semi-bold"><b>Bac Sti2d (science de l'industrie) Blaise pascal - charbonnière les bains</b></p>
+            <p class="semi-bold"><b>Bac Sti2d  (science de l'industrie et du dévelopement durable) Blaise pascal - charbonnière les bains</b></p>
             <p>Conception de matériels électroniques et formation à la sécurité électrique de haute intensité.</p>
           </div>
         </li>
