--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="title">
         <p class="bold">Profil personnel</p>
       </div>
-      <p>Baigné dans l'univers de l'informatique depuis mon plus jeune âge, je suis curieux et passionné. J'aime transmettre mes connaissances au travers de solution digitales et connectées. Je recherche un stage de tutorat de 14 semaines à partir de septembre 2022.</p>
+      <p>Baigné dans l'univers de l'informatique depuis mon plus jeune âge, je suis curieux et passionné. J'aime transmettre mes connaissances au travers de solutions digitales et connectées. Je recherche un stage de tutorat de 14 semaines à partir de septembre 2022.</p>
     </div>
     <div class="resume_item resume_work">
       <div class="title">
