--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="resume_item resume_info">
         <div class="title">
           <p class="bold">Aurélien LACOUR</p>
-          <p class="regular">Front CSS</p>
+          <p class="regular">Front CSS / Communication</p>
         </div>
         <ul>
           <li>
@@ -158,7 +158,7 @@
             <p class="semi-bold"><b>STAGE</b>: Vendeur en boutique de pierres à Mineralia Lyon.</p>
             <p>-mise en rayon<br>
               -étiquetage<br>
-              -conseil aux clients<br>
+              -conseils aux clients<br>
               - vente</p>
           </div>
         </li>
