--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
           <div class="date"><b>2021 - aujourd'hui</b></div>
           <div class="info">
             <p class="semi-bold"><b>ECOLE LDLC - LIMONEST</b></p>
-            <p>formation en 3ans aux métiers de la transition numérique. SEO, programmation et code CSS, marketing, communications</p>
+            <p>Formation en 3ans aux métiers de la transition numérique. SEO, programmation et code CSS, marketing, communications</p>
           </div>
         </li>
         <li>
           <div class="date"><b>2020 (première année de licence)</b></div>
           <div class="info">
             <p class="semi-bold"><b>LEA Anglais-Italien UNIVERSITE JEAN MOULIN - LYON 3</b></p>
-            <p>option : économie et géopolitique</p>
+            <p>Option : économie et géopolitique</p>
           </div>
         </li>
         <li>
