--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="data">
                 <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png"width="35" height="35">
                 <div class="text1">
-                https://bit.ly/alacour
+                <a href="url">https://bit.ly/alacour</a>
               </div>
 
             </div>
@@ -115,7 +115,7 @@
           <li>
              <div class="data">
               <p class="semi-bold">Photographie</p>
-              <p>https://pixabay.com/fr/users/shuutoka-8296266/</p>
+               <p><a href="url">https://pixabay.com/fr/users/shuutoka-8296266/</a></p>
             </div>
           </li>
           <li>
@@ -133,7 +133,7 @@
           <li>
             <div class="data">
              <p class="semi-bold"> Wordpress</p>
-             <p>https://deshumanisation.wordpress.com <br> https://kurtzpelguide.wordpress.com</p>
+              <p><a href="url">https://deshumanisation.wordpress.com</a> <br> <a href="url">https://kurtzpelguide.wordpress.com</a></p>
            </div>
          </li>
         </ul>
@@ -208,7 +208,7 @@
         <li>
           <div class="date"><b>2019</b></div>
           <div class="info">
-            <p class="semi-bold"><b>Bac Sti2d  (science de l'industrie et du dévelopement durable) Blaise pascal - charbonnière les bains</b></p>
+            <p class="semi-bold"><b>Bac Sti2d  (science de l'industrie et du développement durable) Blaise pascal - charbonnière les bains</b></p>
             <p>Conception de matériels électroniques et formation à la sécurité électrique de haute intensité.</p>
           </div>
         </li>
